--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <h1>Sobre a Barbearia Alura</h1>
+    <h1 style="text-align: center;">Sobre a Barbearia Alura</h1>
 
     <p>
       Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz
