--- a/index.html
+++ b/index.html
@@ -3,29 +3,48 @@
   <head>
     <meta charset="UTF-8" />
     <title>Barbearia Alura</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
-    <h1 style="text-align: center;">Sobre a Barbearia Alura</h1>
+    <header>
+      <h1 class="titulo-principal">Barbearia amaral</h1>
+    </header>
+    <img id="banner" src="assets/banner.jpg">
 
-    <p>
-      Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz
-      para o mercado o que há de melhor para o seu cabelo e barba. Fundada em
-      2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes
-      a cada dia.
-    </p>
+    <div class="principal">
 
-    <p style="font-size: 20px;">
-      <em>Nossa missão é:
-        <strong>Proporcionar auto-estima e qualidade de vida aos clientes.</strong>
-      </em>
-    </p>
+      <h2 class="titulo-centralizado">Sobre a Barbearia Amaral</h2>
 
-    <p>
-      Oferecemos profissionais experientes e antenados às mudanças no mundo da
-      moda. O atendimento possui padrão de excelência e agilidade, garantindo
-      qualidade e satisfação dos nossos clientes.
-    </p>
+      <p>
+        Localizada no coração da cidade a <strong> Barbearia Amaral </strong> traz
+        para o mercado o que há de melhor para o seu cabelo e barba. Fundada em
+        2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes
+        a cada dia.
+      </p>
+
+      <p id="grande">
+        <em
+          >Nossa missão é:<strong>Proporcionar auto-estima e qualidade de vida aos clientes.</strong></em>
+      </p>
+
+      <p>
+        Oferecemos profissionais experientes e antenados às mudanças no mundo da
+        moda. O atendimento possui padrão de excelência e agilidade, garantindo
+        qualidade e satisfação dos nossos clientes.
+      </p>
+    </div>
+
+    <div class="divbeneficios">
+    <h3 class="titulo-centralizado">Beneficios</h3>
+
+      <ul>
+        <li>Atendimento aos clientes</li>
+        <li>Espaço diferenciado</li>
+        <li>Localização</li>
+        <li>Profissionais Qualificados</li>
+      </ul>
+      <img class="beneficiosimg" src="assets/beneficios.jpg">
+  </div>
   </body>
 </html>
+ 
