adicionado fonte e pagina de produtos

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <title>Barbearia Alura</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <h1 class="titulo-principal">Barbearia amaral</h1>
+      <h1 data-text="Barbearia Amaral"><span> Barbearia Amaral</span></h1>
     </header>
+
     <img id="banner" src="assets/banner.jpg">
 
     <div class="principal">
@@ -46,5 +49,5 @@
       <img class="beneficiosimg" src="assets/beneficios.jpg">
   </div>
   </body>
-</html>
+</html>-->
  
