--- a/Produtos.html
+++ b/Produtos.html
@@ -14,13 +14,39 @@
                 <ul>
                     <li><a href="index.html">Home </a></li>
                     <li><a href="produtos.html">Produtos</a></li>
-                    <li><a href="contatos.html">Contatos</a></li>
+                    <li><a href="https://www.facebook.com/tainan.amaral.56">Contatos</a></li>
                 </ul>
             </nav>
          </div>
         </header>
 
+        <main>
+            <ul class="produtos">
+                <li><h2>Cabelo</h2>
+                <img src="assets/cabelo.pngagoravai.png"">
+                <p class="produto-descrição">Na tesoura ou maquina como o cliente preferir</p>
+                <p class="produto-preco">R$ 25.00</p>
+                </li>
 
+                <li><h2>Barba</h2>
+                    <img src="assets/barba.jpg">
+                    <p class="produto-descrição">Corte e desenho profissional de barba</p>
+                    <p class="produto-preco">R$ 18,00</p>
+                </li>
+
+                <li><h2>Cabelo + Barba</h2>
+                    <img src="assets/cabelo+barba.jpg">
+                    <p class="produto-descrição">Pacote completo de corte e barba</p>
+                    <p class="produto-preco">R$ 30,00</p>
+                </li>
+            </ul>   
+        </main>
+
+        <footer>
+            <img src="assets/logo-branco.png">
+            <p> Todos direitos a Tainan Amaral </p>
+        </footer>
     </body>
+
 
 </html>
